Ancres sur les Cards

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
 
       <div class="container">
-        <div class="card popular__card bg--white mb-smallest">
+        <a href="#" class="card popular__card bg--white mb-smallest">
           <img src="./img/lodging/soleil-du-matin.jpg" alt="Photo de l'hôtel Le soleil du matin">
           <div class="card__info">
             <div class="card__text">
@@ -126,9 +126,9 @@
               <i class="fas fa-star"></i>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="card popular__card bg--white mb-smallest">
+        <a href="#" class="card popular__card bg--white mb-smallest">
           <img src="./img/lodging/coeur-de-l-eau.jpg" alt="Photo d'Au coeur de l'eau">
           <div class="card__info">
             <div class="card__text">
@@ -143,9 +143,9 @@
               <i class="fas fa-star color--secondary"></i>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="card popular__card bg--white mb-smallest">
+        <a href="#" class="card popular__card bg--white mb-smallest">
           <img src="./img/lodging/tout-bleu-et-blanc.jpg" alt="Photo de l'hôtel Tout bleu et Blanc">
           <div class="card__info">
             <div class="card__text">
@@ -160,7 +160,7 @@
               <i class="fas fa-star color--secondary"></i>
             </div>
           </div>
-        </div>
+        </a>
       </div>
 
     </section>
@@ -168,7 +168,7 @@
     <section id="lodging" class="lodging p-small">
       <h2 class="heading-2 mb-smallest">Hébergements à Marseille</h2>
 
-      <div class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/auberge-cannebiere.jpg" alt="Photo de l'Auberge la Cannebière">
         <div class="card__info">
           <div class="card__text">
@@ -183,9 +183,9 @@
             <i class="fas fa-star color--secondary"></i>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/hotel-du-port.jpg" alt="Photo de l'Hôtel du port">
         <div class="card__info">
           <div class="card__text">
@@ -200,9 +200,9 @@
             <i class="fas fa-star"></i>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/hotel-les-mouettes.jpg" alt="Photo de l'Hôtel Les mouettes">
         <div class="card__info">
           <div class="card__text">
@@ -217,9 +217,9 @@
             <i class="fas fa-star color--secondary"></i>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/hotel-de-la-mer.jpg" alt="Photo de l'Hôtel de la mer">
         <div class="card__info">
           <div class="card__text">
@@ -234,9 +234,9 @@
             <i class="fas fa-star color--secondary"></i>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/auberge-le-panier.jpg" alt="Photo de l'Auberge Le Panier">
         <div class="card__info">
           <div class="card__text">
@@ -251,9 +251,9 @@
             <i class="fas fa-star color--secondary"></i>
           </div>
         </div>
-      </div>
+      </a>
 
-      <div class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/chez-amina.jpg" alt="Photo de l'Hôtel chez Amina">
         <div class="card__info">
           <div class="card__text">
@@ -268,7 +268,7 @@
             <i class="fas fa-star"></i>
           </div>
         </div>
-      </div>
+      </a>
 
       <a href="#" class="lodging__more">Affichez plus</a>
 
@@ -278,60 +278,60 @@
       <h2 class="heading-2 mb-smallest">Activités à Marseille</h2>
 
       <div class="activities__container">
-        <div class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
           <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
           <div class="card__info p-smallest">
             <div class="card__text">
               <h4 class="heading-4">Vieux Port</h4>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
           <img src="./img/activities/fort-de-pomegues.jpg" alt="Photo du Fort de Pomègues">
           <div class="card__info p-smallest">
             <div class="card__text">
               <h4 class="heading-4">Fort de Pomègues</h4>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
           <img src="./img/activities/iles-du-frioul.jpg" alt="Photo des Îles du Frioul">
           <div class="card__info p-smallest">
             <div class="card__text">
               <h4 class="heading-4">Îles du Frioul</h4>
             </div>
           </div>
-        </div>
+        </a>
 
 
-        <div class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
           <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
           <div class="card__info p-smallest">
             <div class="card__text">
               <h4 class="heading-4">Parc National des Calanques</h4>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
           <img src="./img/activities/notre-dame.jpg" alt="Photo de Notre-Dame-de-la-Garde">
           <div class="card__info p-smallest">
             <div class="card__text">
               <h4 class="heading-4">Notre-Dame-de-la-Garde</h4>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
           <img src="./img/activities/parc-lonchamp.jpg" alt="Photo du Parc Longchamp">
           <div class="card__info p-smallest">
             <div class="card__text">
               <h4 class="heading-4">Parc Longchamp</h4>
             </div>
           </div>
-        </div>
+        </a>
       </div>
 
     </section>
