Mise à jour du Search Form

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <input type="text" class="search__input" placeholder="Marseille, France" />
         <button class="search__button btn btn--cta">
           <i class="fas fa-search"></i>
+          <p>Rechercher</p>
         </button>
       </form>
 
