Padding des sections Activités et Populaires

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
 
     <div class="header__register">
-      <a class="header__btn">S'inscrire</a>
+      <a class="header__btn btn">S'inscrire</a>
     </div>
 
   </header>
@@ -105,13 +105,13 @@
       </div>
     </header>
 
-    <section class="popular bg--secondary p-small">
-      <div class="popular__header mb-smallest">
+    <section class="popular bg--secondary">
+      <div class="popular__header">
         <h2 class="popular__title heading-2">Les plus populaires</h2>
         <i class="fas fa-chart-line"></i>
       </div>
 
-      <div class="container">
+      <div class="popular__container">
         <a href="#" class="card popular__card bg--white mb-smallest">
           <img src="./img/lodging/soleil-du-matin.jpg" alt="Photo de l'hôtel Le soleil du matin">
           <div class="card__info">
@@ -146,7 +146,7 @@
           </div>
         </a>
 
-        <a href="#" class="card popular__card bg--white mb-smallest">
+        <a href="#" class="card popular__card bg--white">
           <img src="./img/lodging/tout-bleu-et-blanc.jpg" alt="Photo de l'hôtel Tout bleu et Blanc">
           <div class="card__info">
             <div class="card__text">
@@ -166,8 +166,8 @@
 
     </section>
 
-    <section id="lodging" class="lodging p-small">
-      <h2 class="heading-2 mb-smallest">Hébergements à Marseille</h2>
+    <section id="lodging" class="lodging">
+      <h2 class="heading-2">Hébergements à Marseille</h2>
 
       <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
         <img src="./img/lodging/auberge-cannebiere.jpg" alt="Photo de l'Auberge la Cannebière">
