Modification du padding des Sections

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <main class="main">
 
-    <header class="main-header p-small">
+    <header class="main-header">
       <h1 class="heading-1">Trouvez votre hébergement pour des vacances de rêve</h1>
       <p class="paragraph">En plein centre ville ou en pleine nature</p>
 
@@ -275,11 +275,11 @@
 
     </section>
 
-    <section id="activities" class="activities p-small">
-      <h2 class="heading-2 mb-smallest">Activités à Marseille</h2>
+    <section id="activities" class="activities">
+      <h2 class="heading-2">Activités à Marseille</h2>
 
       <div class="activities__container">
-        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white">
           <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
           <div class="card__info p-smallest">
             <div class="card__text">
@@ -288,7 +288,7 @@
           </div>
         </a>
 
-        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white">
           <img src="./img/activities/fort-de-pomegues.jpg" alt="Photo du Fort de Pomègues">
           <div class="card__info p-smallest">
             <div class="card__text">
@@ -297,7 +297,7 @@
           </div>
         </a>
 
-        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white">
           <img src="./img/activities/iles-du-frioul.jpg" alt="Photo des Îles du Frioul">
           <div class="card__info p-smallest">
             <div class="card__text">
@@ -307,7 +307,7 @@
         </a>
 
 
-        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white">
           <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
           <div class="card__info p-smallest">
             <div class="card__text">
@@ -316,7 +316,7 @@
           </div>
         </a>
 
-        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white">
           <img src="./img/activities/notre-dame.jpg" alt="Photo de Notre-Dame-de-la-Garde">
           <div class="card__info p-smallest">
             <div class="card__text">
@@ -325,7 +325,7 @@
           </div>
         </a>
 
-        <a href="#" class="card card--horizontal activities__card bg--white mb-smallest">
+        <a href="#" class="card card--horizontal activities__card bg--white">
           <img src="./img/activities/parc-lonchamp.jpg" alt="Photo du Parc Longchamp">
           <div class="card__info p-smallest">
             <div class="card__text">
