Ajout de balises Pictures pour écrans HD

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
 
     <div class="header__register">
-      <a class="header__btn btn">S'inscrire</a>
+      <a class="btn btn--header">S'inscrire</a>
     </div>
 
   </header>
@@ -54,20 +54,20 @@
       <h1 class="heading-1">Trouvez votre hébergement pour des vacances de rêve</h1>
       <p class="paragraph">En plein centre ville ou en pleine nature</p>
 
-      <form action="#" class="search m-medium">
+      <form action="#" class="search">
         <div class="search__gps">
           <button class="btn color--black">
             <i class="fas fa-map-marker-alt"></i>
           </button>
         </div>
         <input type="text" class="search__input" placeholder="Marseille, France" />
-        <button class="search__button btn btn--cta">
+        <button class="btn btn--search">
           <i class="fas fa-search"></i>
         </button>
       </form>
 
       <div class="filters">
-        <h2 class="heading-2 mb-smallest">Filtres</h2>
+        <h2 class="heading-2">Filtres</h2>
         <ul class="filters__list">
           <li class="filters__item">
             <div>
@@ -97,7 +97,7 @@
             <a href="#" class="filters__link">Animaux autorisés</a>
           </li>
         </ul>
-        <div class="filters__info m-small">
+        <div class="filters__info">
           <i class="fas fa-info"></i>
           <p class="paragraph">Plus de 500 logements sont disponibles dans cette ville.</p>
         </div>
@@ -111,7 +111,7 @@
       </div>
 
       <div class="popular__container">
-        <a href="#" class="card popular__card bg--white mb-smallest">
+        <a href="#" class="card card--popular bg--white">
           <img src="./img/lodging/soleil-du-matin.jpg" alt="Photo de l'hôtel Le soleil du matin">
           <div class="card__info">
             <div class="card__text">
@@ -128,7 +128,7 @@
           </div>
         </a>
 
-        <a href="#" class="card popular__card bg--white mb-smallest">
+        <a href="#" class="card card--popular bg--white">
           <img src="./img/lodging/coeur-de-l-eau.jpg" alt="Photo d'Au coeur de l'eau">
           <div class="card__info">
             <div class="card__text">
@@ -145,7 +145,7 @@
           </div>
         </a>
 
-        <a href="#" class="card popular__card bg--white">
+        <a href="#" class="card card--popular bg--white">
           <img src="./img/lodging/tout-bleu-et-blanc.jpg" alt="Photo de l'hôtel Tout bleu et Blanc">
           <div class="card__info">
             <div class="card__text">
@@ -168,7 +168,7 @@
     <section id="lodging" class="lodging">
       <h2 class="heading-2">Hébergements à Marseille</h2>
 
-      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal card--lodging bg--white">
         <img src="./img/lodging/auberge-cannebiere.jpg" alt="Photo de l'Auberge la Cannebière">
         <div class="card__info">
           <div class="card__text">
@@ -185,7 +185,7 @@
         </div>
       </a>
 
-      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal card--lodging bg--white">
         <img src="./img/lodging/hotel-du-port.jpg" alt="Photo de l'Hôtel du port">
         <div class="card__info">
           <div class="card__text">
@@ -202,7 +202,7 @@
         </div>
       </a>
 
-      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal card--lodging bg--white">
         <img src="./img/lodging/hotel-les-mouettes.jpg" alt="Photo de l'Hôtel Les mouettes">
         <div class="card__info">
           <div class="card__text">
@@ -219,7 +219,7 @@
         </div>
       </a>
 
-      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal card--lodging bg--white">
         <img src="./img/lodging/hotel-de-la-mer.jpg" alt="Photo de l'Hôtel de la mer">
         <div class="card__info">
           <div class="card__text">
@@ -236,7 +236,7 @@
         </div>
       </a>
 
-      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal card--lodging bg--white">
         <img src="./img/lodging/auberge-le-panier.jpg" alt="Photo de l'Auberge Le Panier">
         <div class="card__info">
           <div class="card__text">
@@ -253,7 +253,7 @@
         </div>
       </a>
 
-      <a href="#" class="card card--horizontal lodging__card bg--white mb-smallest">
+      <a href="#" class="card card--horizontal card--lodging bg--white">
         <img src="./img/lodging/chez-amina.jpg" alt="Photo de l'Hôtel chez Amina">
         <div class="card__info">
           <div class="card__text">
@@ -278,27 +278,30 @@
       <h2 class="heading-2">Activités à Marseille</h2>
 
       <div class="activities__container">
-        <a href="#" class="card card--horizontal activities__card bg--white">
-          <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
-          <div class="card__info p-smallest">
+        <a href="#" class="card card--horizontal card--activities bg--white">
+          <picture>
+            <source srcset="./img/activities/vieux-port-HD.jpg" media="(min-width: 1920px)">
+            <img src="./img/activities/vieux-port.jpg" alt="Photo du Vieux Port de Marseille">
+          </picture>
+          <div class="card__info">
             <div class="card__text">
               <h4 class="heading-4">Vieux Port</h4>
             </div>
           </div>
         </a>
 
-        <a href="#" class="card card--horizontal activities__card bg--white">
+        <a href="#" class="card card--horizontal card--activities bg--white">
           <img src="./img/activities/fort-de-pomegues.jpg" alt="Photo du Fort de Pomègues">
-          <div class="card__info p-smallest">
+          <div class="card__info">
             <div class="card__text">
               <h4 class="heading-4">Fort de Pomègues</h4>
             </div>
           </div>
         </a>
 
-        <a href="#" class="card card--horizontal activities__card bg--white">
+        <a href="#" class="card card--horizontal card--activities bg--white">
           <img src="./img/activities/iles-du-frioul.jpg" alt="Photo des Îles du Frioul">
-          <div class="card__info p-smallest">
+          <div class="card__info">
             <div class="card__text">
               <h4 class="heading-4">Îles du Frioul</h4>
             </div>
@@ -306,27 +309,30 @@
         </a>
 
 
-        <a href="#" class="card card--horizontal activities__card bg--white">
-          <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
-          <div class="card__info p-smallest">
+        <a href="#" class="card card--horizontal card--activities bg--white">
+          <picture>
+            <source srcset="./img/activities/parc-national-des-calanques-HD.jpg" media="(min-width: 1920px)">
+            <img src="./img/activities/parc-national-des-calanques.jpg" alt="Photo du Parc National des Calanques">
+          </picture>
+          <div class="card__info">
             <div class="card__text">
               <h4 class="heading-4">Parc National des Calanques</h4>
             </div>
           </div>
         </a>
 
-        <a href="#" class="card card--horizontal activities__card bg--white">
+        <a href="#" class="card card--horizontal card--activities bg--white">
           <img src="./img/activities/notre-dame.jpg" alt="Photo de Notre-Dame-de-la-Garde">
-          <div class="card__info p-smallest">
+          <div class="card__info">
             <div class="card__text">
               <h4 class="heading-4">Notre-Dame-de-la-Garde</h4>
             </div>
           </div>
         </a>
 
-        <a href="#" class="card card--horizontal activities__card bg--white">
+        <a href="#" class="card card--horizontal card--activities bg--white">
           <img src="./img/activities/parc-lonchamp.jpg" alt="Photo du Parc Longchamp">
-          <div class="card__info p-smallest">
+          <div class="card__info">
             <div class="card__text">
               <h4 class="heading-4">Parc Longchamp</h4>
             </div>
@@ -339,29 +345,31 @@
   </main>
 
   <footer class="footer bg--secondary">
-    <div class="footer__about">
-      <h3 class="footer__title heading-3">A propos</h3>
-      <ul class="footer__list">
-        <li class="footer__item"><a href="#" class="footer__link">Fonctionnement du site</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Conditions générales de vente</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Données et confidentialité</a></li>
-      </ul>
-    </div>
+    <div class="footer__container">
+      <div class="footer__about">
+        <h3 class="footer__title heading-3">A propos</h3>
+        <ul class="footer__list">
+          <li class="footer__item"><a href="#" class="footer__link">Fonctionnement du site</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Conditions générales de vente</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Données et confidentialité</a></li>
+        </ul>
+      </div>
 
-    <div class="footer__lodging">
-      <h3 class="footer__title heading-3">Nos hébergements</h3>
-      <ul class="footer__list">
-        <li class="footer__item"><a href="#" class="footer__link">Charte qualité</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Soumettre votre hôtel</a></li>
-      </ul>
-    </div>
+      <div class="footer__lodging">
+        <h3 class="footer__title heading-3">Nos hébergements</h3>
+        <ul class="footer__list">
+          <li class="footer__item"><a href="#" class="footer__link">Charte qualité</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Soumettre votre hôtel</a></li>
+        </ul>
+      </div>
 
-    <div class="footer__help">
-      <h3 class="footer__title heading-3">Assistance</h3>
-      <ul class="footer__list">
-        <li class="footer__item"><a href="#" class="footer__link">Centre d'aide</a></li>
-        <li class="footer__item"><a href="#" class="footer__link">Nous contacter</a></li>
-      </ul>
+      <div class="footer__help">
+        <h3 class="footer__title heading-3">Assistance</h3>
+        <ul class="footer__list">
+          <li class="footer__item"><a href="#" class="footer__link">Centre d'aide</a></li>
+          <li class="footer__item"><a href="#" class="footer__link">Nous contacter</a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
